# sampleproject

./: .bazelrc  .gitignore  Makefile  WORKSPACE  main.go  setup.py
.github/workflows/: build.yml
core/: BUILD.bazel
fbs/: Data_grpc.go  Record.go  schema.fbs
fluyt/: __init__.py
fluyt/core/python/api/: __init__.py  ops.py  random.py
fluyt/core/python/ops/: basic_ops.py  core_ops.py  random_ops.py
magnify/: __init__.py
magnify/core/python/api/: __init__.py  color.py  image.py
magnify/core/python/ops/: color_ops.py  core_ops.py  image_ops.py
tests/: test_color.py  test_fluyt.py  test_image.py  test_magnify.py
